--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@
 @keyframes increaseSize{
     from {height: 100px;
         width: 100px;}
-    to {height: 200px; width: 200px;}
+    to {height: 130px; width: 130px;}
+}
+@keyframes decreaseSize{
+    from {height: 130px; width: 130px;}
+    to {height: 100px; width: 100px;}
 }
 .div1{
     display: flex;
@@ -22,24 +26,30 @@
 #b1{
     order: 1;
     text-align: center;
+    transition: all 1s ease;
+    /* transition: height 1s ease,width 1s ease; */
 }
 #b2{
     order: 2;
     text-align: center;
+    transition: all 1s ease ;
 }
 #b3{
     order: 3;
     text-align: center;
+    transition: all  1s ease;
 }
 #b4{
     order: 4;
     text-align: center;
     border-top:50%;
     border-bottom: 50%;
+    transition: all 1s ease ; 
 }
 .functions{
     display: inline-block;
     margin-left: 5%;
+    
 }
 
 
