--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
     display: flex;
     flex-wrap: wrap;
 }
-@keyframes increaseSize{
+/* @keyframes increaseSize{
     from {height: 100px;
         width: 100px;}
-    to {height: 200px; width: 200px;}
-}
+    to {height: 130px; width: 130px;}
+} */
 .div1{
     display: flex;
     flex-wrap: wrap;
@@ -22,24 +22,31 @@
 #b1{
     order: 1;
     text-align: center;
+    transition: all 1s ease;
+    /* transition: height 1s ease,width 1s ease; */
 }
 #b2{
     order: 2;
     text-align: center;
+    transition: all 1s ease ;
 }
 #b3{
     order: 3;
     text-align: center;
+    transition: all  1s ease;
 }
 #b4{
     order: 4;
     text-align: center;
     border-top:50%;
     border-bottom: 50%;
+    transition: all 1s ease ; 
 }
 .functions{
     display: inline-block;
     margin-left: 5%;
+    
 }
+
 
 
